--- a/scss/main.scss
+++ b/scss/main.scss
@@ -26,25 +26,22 @@
 @import 'section/photos';
 @import 'section/maps';
 @import 'section/about';
-
-body, html {
-	margin: 0;
-	padding: 0;
+html {
+	color: var(--text-color);
+	background-color: var(--bg-color);
 	width: 100%;
 	min-height: 100vh;
 	font-family: 'Muli', sans-serif;
 	-ms-overflow-style: -ms-autohiding-scrollbar;
-
-	color: $c-b;
-	background-color: $c-w;
-
-	color: var(--text-color);
-	background-color: var(--bg-color);
+}
+body {
+	margin: 0;
+	padding: 0;
 	transition: all .5s ease-in-out;
 }
 
 body.no-touching {
-	touch-actions: none;
+	touch-action: none;
 	pointer-events: none;
 }
 
@@ -101,7 +98,7 @@ body.no-touching {
 	margin: 0 auto;
 	overflow-x: hidden;
 	@media screen and (max-width: 40em) {
-		padding: 0;
+		padding: 0 1em;
 	}
 }
 .info {
